syntax = "proto3";

option java_package = "com.pucpr.devops.grpc";
option java_multiple_files = true;
option java_outer_classname = "PasswordGeneratorProto";

service PasswordService {
  rpc generatePassword(PasswordRequest) returns (PasswordResponse);
  rpc generateMultiplePasswords(PasswordRequest) returns (stream PasswordResponse);
}

message PasswordRequest {
  int32 length = 1;
  bool includeNumbers = 2;
  bool includeSymbols = 3;
  bool includeUppercase = 4;
  int32 quantity = 5;
}

message PasswordResponse {
  string password = 1;
}
